ingress/my-first-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: my-first-ingress
spec:
  rules:
  - host: myapp-ingress.com
    http: #Protocol -> example http://host
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netty-to-log-service
            port:
              number: 8080  #ONLY Port in service(NO TARGETPORT, NO NODEPORT)
